--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <script>
         const fogButton = document.getElementById('fogButton');
-        const onURL = "https://maker.ifttt.com/trigger/fog_on/json/with/key/4sN8nwi3EcxSd3Fyymx6z";
-        const offURL = "https://maker.ifttt.com/trigger/fog_off/json/with/key/4sN8nwi3EcxSd3Fyymx6z";
+        const onURL = “https://maker.ifttt.com/trigger/fog on/with/key/4sN8nwi3EcxSd3Fyymx6z”;
+        const offURL =https://maker.ifttt.com/trigger/Fog off/with/key/4sN8nwi3EcxSd3Fyymx6z";
 
         fogButton.addEventListener('mousedown', () => fetch(onURL));
         fogButton.addEventListener('mouseup', () => fetch(offURL));
